--- a/ImageMap4/Controls/MapList.xaml
+++ b/ImageMap4/Controls/MapList.xaml
@@ -8,7 +8,8 @@
              xmlns:wpftk="clr-namespace:WpfToolkit.Controls;assembly=VirtualizingWrapPanel"
              mc:Ignorable="d"
              d:DesignHeight="450"
-             d:DesignWidth="800">
+             d:DesignWidth="800"
+             Focusable="True">
     <UserControl.InputBindings>
         <KeyBinding Modifiers="Ctrl"
                     Key="A"
