Image export window!
To achieve this, I split the grid editor stuff from StructureWindow to a user control. Now StructureWindow just passes in its extra controls. There's another ViewModel too. Then the ImageWindow provides a custom template so that it just shows the image with no item frame background. Overall I'm pleased with it, though there were a few hacks

--- a/ImageMap4/Controls/SquareGrid.xaml
+++ b/ImageMap4/Controls/SquareGrid.xaml
@@ -25,11 +25,12 @@
                      SnapsToDevicePixels="True" />
         <ContentPresenter Grid.Row="1"
                           Grid.Column="1"
-                          Content="{Binding Inside, ElementName=This}" />
+                          Content="{Binding Inside, RelativeSource={RelativeSource AncestorType=local:SquareGrid}}" />
         <local:GridlineRenderer Grid.Row="1"
                                 Grid.Column="1"
-                                Rows="{Binding Rows, ElementName=This}"
-                                Columns="{Binding Columns, ElementName=This}"
-                                SnapsToDevicePixels="True" />
+                                Rows="{Binding Rows, RelativeSource={RelativeSource AncestorType=local:SquareGrid}}"
+                                Columns="{Binding Columns, RelativeSource={RelativeSource AncestorType=local:SquareGrid}}"
+                                SnapsToDevicePixels="True"
+                                IsHitTestVisible="False" />
     </Grid>
 </UserControl>
