--- a/ImageMap4/ChangeIDWindow.xaml
+++ b/ImageMap4/ChangeIDWindow.xaml
@@ -17,6 +17,13 @@
         <KeyBinding Key="Return"
                     Command="{Binding ConfirmCommand, RelativeSource={RelativeSource AncestorType=Window}}" />
     </Window.InputBindings>
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Shared.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <StackPanel Margin="20">
         <DockPanel>
             <TextBlock Text="map_"
@@ -39,6 +46,29 @@
                     Command="{Binding CancelCommand, RelativeSource={RelativeSource AncestorType=Window}}"
                     Padding="10,5,10,5"
                     Margin="5,0,0,0" />
+        </StackPanel>
+        <StackPanel Orientation="Horizontal"
+                    Margin="0,10,0,0">
+            <StackPanel.Style>
+                <Style TargetType="StackPanel">
+                    <Setter Property="Visibility"
+                            Value="Collapsed" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Conflicts, RelativeSource={RelativeSource AncestorType=Window}}"
+                                     Value="True">
+                            <Setter Property="Visibility"
+                                    Value="Visible" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </StackPanel.Style>
+            <Image Source="{StaticResource WarningIcon}"
+                   Height="18"
+                   RenderOptions.BitmapScalingMode="NearestNeighbor"
+                   SnapsToDevicePixels="True" />
+            <TextBlock FontSize="15"
+                       Margin="10,0,10,0"
+                       Text="This will replace existing maps"/>
         </StackPanel>
     </StackPanel>
 </Window>
