--- a/ImageMap4/Controls/MapList.xaml
+++ b/ImageMap4/Controls/MapList.xaml
@@ -9,7 +9,8 @@
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800"
-             Focusable="True">
+             Focusable="True"
+             MouseDown="List_MouseDown">
     <UserControl.InputBindings>
         <KeyBinding Modifiers="Ctrl"
                     Key="A"
