Anyone else scared of locks?

--- a/ImageMap4/MainWindow.xaml
+++ b/ImageMap4/MainWindow.xaml
@@ -87,6 +87,8 @@
                                 Value="#CCDDFF" />
                     </Trigger>
                 </Style.Triggers>
+                <EventSetter Event="MouseDoubleClick"
+                             Handler="World_DoubleClick" />
                 <Setter Property="Background"
                         Value="#E5E5E5" />
                 <Setter Property="ContextMenu"
